# astra-mcp-server

./: .gitignore  BUILD.md  LICENSE  README.md  RELEASE_NOTES_v0.0.4.md  auth.py  catalog.py  database.py  embedding.py  env.example  load_tools.py  logger.py  pyproject.toml  run_tool.py  server.py  setup.py  tools_config_example.json  utils.py
examples/prompts/: tool_agent_prompt.md
examples/tools/: airline_tool_by_agent.json  products_tool.json  user_tool.json
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/db/objects/: route.ts
frontend/app/api/tools/: route.ts
frontend/app/api/tools/attributes/: route.ts
frontend/app/api/tools/generate/: route.ts
frontend/components/: ThemeToggle.tsx  ToolEditor.tsx  ToolList.tsx
frontend/lib/: astraClient.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ThemeToggle.tsx  ToolEditor.tsx  ToolList.tsx
frontend/src/utils/: astraClient.ts
src/agentic_astra/: __init__.py  audit.py  auth.py  catalog.py  database.py  llm.py  load_tools.py  logger.py  server.py  tool_agent.py  tool_agent_prompt.py  utils.py
src/astra_mcp_server/: __init__.py  auth.py  catalog.py  database.py  load_tools.py  logger.py  run_tool.py  server.py  tool_agent.py  utils.py
tests/: README.md  test_env.py  test_http.py  test_logging.py  test_table.py
