[project]
name = "astra-mcp-server"
version = "0.1.0"
description = "Astra MCP Server"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    {name = "Samuel Matioli", email = "samuel.matioli@ibm.com"},
    {name = "Samuel Matioli", email = "smatioli@gmail.com"}
]

license = {text = "MIT"}
keywords = ["mcp", "astra", "datastax", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astrapy>=2.0.1",
    "fastmcp>=2.12.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/smatiolids/astra-mcp-server"
Repository = "https://github.com/smatiolids/astra-mcp-server"
Issues = "https://github.com/smatiolids/astra-mcp-server/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.scripts]
upload_catalog = "uvicorn catalog:main --factory --reload"
astra-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"